--- a/app/src/main/res/layout/fragment_foto_perfil.xml
+++ b/app/src/main/res/layout/fragment_foto_perfil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".usuari.FotoPerfil">
+    tools:context=".ui.fragment.usuari.FotoPerfil">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
