--- a/app/src/main/res/layout/fragment_maps_usuaris.xml
+++ b/app/src/main/res/layout/fragment_maps_usuaris.xml
@@ -6,7 +6,7 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".usuari.MapsUsuaris">
+    tools:context=".ui.fragment.usuari.MapsUsuaris">
 
     <Button
         android:id="@+id/btn_tornar_geolocalitzacio"
