--- a/app/src/main/res/navigation/nav_graph_administrador.xml
+++ b/app/src/main/res/navigation/nav_graph_administrador.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/menu"
-        android:name="copernic.cat.kingsleague.administrador.MenuAdmin"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.MenuAdmin"
         android:label="fragment_menu_admin"
         tools:layout="@layout/fragment_menu_admin" >
         <action
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/crearEquips"
-        android:name="copernic.cat.kingsleague.administrador.CrearEquips"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.CrearEquips"
         android:label="fragment_crear_equips"
         tools:layout="@layout/fragment_crear_equips" >
         <action
@@ -40,7 +40,7 @@
     </fragment>
     <fragment
         android:id="@+id/crearJugador"
-        android:name="copernic.cat.kingsleague.administrador.CrearJugador"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.CrearJugador"
         android:label="fragment_crear_jugador"
         tools:layout="@layout/fragment_crear_jugador" >
         <action
@@ -52,7 +52,7 @@
     </fragment>
     <fragment
         android:id="@+id/eliminarEquips"
-        android:name="copernic.cat.kingsleague.administrador.EliminarEquips"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.EliminarEquips"
         android:label="fragment_eliminar_equips"
         tools:layout="@layout/fragment_eliminar_equips" >
         <action
@@ -64,7 +64,7 @@
     </fragment>
     <fragment
         android:id="@+id/eliminarJugadors"
-        android:name="copernic.cat.kingsleague.administrador.EliminarJugadors"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.EliminarJugadors"
         android:label="fragment_eliminar_jugadors"
         tools:layout="@layout/fragment_eliminar_jugadors" >
         <action
@@ -76,7 +76,7 @@
     </fragment>
     <fragment
         android:id="@+id/menuEquips"
-        android:name="copernic.cat.kingsleague.administrador.MenuEquips"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.MenuEquips"
         android:label="fragment_menu_equips"
         tools:layout="@layout/fragment_menu_equips" >
         <action
@@ -94,7 +94,7 @@
     </fragment>
     <fragment
         android:id="@+id/menuJugadors"
-        android:name="copernic.cat.kingsleague.administrador.MenuJugadors"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.MenuJugadors"
         android:label="fragment_menu_jugadors"
         tools:layout="@layout/fragment_menu_jugadors" >
         <action
@@ -109,7 +109,7 @@
     </fragment>
     <fragment
         android:id="@+id/modificarClassificacio"
-        android:name="copernic.cat.kingsleague.administrador.ModificarClassificacio"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.ModificarClassificacio"
         android:label="fragment_modificar_classificacio"
         tools:layout="@layout/fragment_modificar_classificacio" >
         <action
@@ -121,7 +121,7 @@
     </fragment>
     <fragment
         android:id="@+id/jugadorsAdmin"
-        android:name="copernic.cat.kingsleague.administrador.JugadorsAdmin"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.JugadorsAdmin"
         android:label="JugadorsAdmin" >
         <action
             android:id="@+id/action_jugadorsAdmin_to_menu"
@@ -129,7 +129,7 @@
     </fragment>
     <fragment
         android:id="@+id/classificacioAdmin"
-        android:name="copernic.cat.kingsleague.administrador.ClassificacioAdmin"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.ClassificacioAdmin"
         android:label="ClassificacioAdmin" >
         <action
             android:id="@+id/action_classificacioAdmin_to_menu"
@@ -137,7 +137,7 @@
     </fragment>
     <fragment
         android:id="@+id/configuracioAdmin"
-        android:name="copernic.cat.kingsleague.administrador.ConfiguracioAdmin"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.ConfiguracioAdmin"
         android:label="ConfiguracioAdmin" >
         <action
             android:id="@+id/action_configuracioAdmin_to_menu"
@@ -151,7 +151,7 @@
     </fragment>
     <fragment
         android:id="@+id/maps"
-        android:name="copernic.cat.kingsleague.administrador.Maps"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.Maps"
         android:label="Maps" >
         <action
             android:id="@+id/action_maps_to_configuracioAdmin"
@@ -159,11 +159,14 @@
     </fragment>
     <fragment
         android:id="@+id/fotoPerfilAdmin"
-        android:name="copernic.cat.kingsleague.administrador.FotoPerfilAdmin"
+        android:name="copernic.cat.kingsleague.ui.fragment.administrador.FotoPerfilAdmin"
         android:label="fragment_foto_perfil_admin"
         tools:layout="@layout/fragment_foto_perfil_admin" >
         <action
             android:id="@+id/action_fotoPerfilAdmin_to_configuracioAdmin"
             app:destination="@id/configuracioAdmin" />
+        <action
+            android:id="@+id/action_fotoPerfilAdmin_to_menu"
+            app:destination="@id/menu" />
     </fragment>
 </navigation>
