--- a/app/src/main/res/navigation/nav_graph_usuaris.xml
+++ b/app/src/main/res/navigation/nav_graph_usuaris.xml
@@ -78,7 +78,7 @@
     </fragment>
     <fragment
         android:id="@+id/equipsSafeArgs2"
-        android:name="copernic.cat.kingsleague.EquipsSafeArgs"
+        android:name="copernic.cat.kingsleague.ui.fragment.EquipsSafeArgs"
         android:label="fragment_equips_safe_args"
         tools:layout="@layout/fragment_equips_safe_args" >
         <argument
