--- a/app/src/main/res/layout/fragment_equips_safe_args.xml
+++ b/app/src/main/res/layout/fragment_equips_safe_args.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".EquipsSafeArgs">
+    tools:context=".ui.fragment.EquipsSafeArgs">
 
     <TextView
         android:id="@+id/TitolEquip"
@@ -26,7 +26,7 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+        app:layout_constraintTop_toBottomOf="@+id/rvJugadors" />
 
     <TextView
         android:id="@+id/puntuacio"
@@ -55,14 +55,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:layout_marginTop="30dp"
         android:text="@string/_0"
         app:layout_constraintStart_toEndOf="@+id/puntuacio"
         app:layout_constraintTop_toBottomOf="@+id/TitolEquip" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rvJugadors"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:layout_marginStart="50dp"
