--- a/app/src/main/res/layout/fragment_jugadors.xml
+++ b/app/src/main/res/layout/fragment_jugadors.xml
@@ -54,8 +54,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvJugadors"
-        android:layout_width="325dp"
-        android:layout_height="180dp"
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
             app:layout_constraintTop_toBottomOf="@+id/editNomEquip"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
             tools:layout_editor_absoluteX="1dp" />
 
     </androidx.cardview.widget.CardView>
