--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/configuracio"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="@string/item"
-        app:showAsAction="always"/>
-
-
+        android:id="@+id/geolocalitzacio"
+        android:title="@string/vine_al_camp" />
+    <item
+        android:id="@+id/foto"
+        android:title="@string/canviar_foto" />
+    <item
+        android:id="@+id/tancarsessio"
+        android:title="@string/tancar_sessio" />
 </menu>
-
-
