--- a/app/src/main/res/layout/fragment_classificacio_admin.xml
+++ b/app/src/main/res/layout/fragment_classificacio_admin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".administrador.ClassificacioAdmin">
+    tools:context="ui.fragment.administrador.ClassificacioAdmin">
 
     <TextView
         android:id="@+id/TitolClassificacio"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
         android:text="@string/classificaci"
-        android:textSize="30sp"
+        android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
