--- a/app/src/main/res/layout/fragment_eliminar_equips.xml
+++ b/app/src/main/res/layout/fragment_eliminar_equips.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".administrador.EliminarEquips">
+    tools:context="ui.fragment.administrador.EliminarEquips">
 
     <TextView
         android:id="@+id/TitolEliminarEquips"
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
         android:text="@string/eliminar_equips"
-        android:textSize="30sp"
+        android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
