--- a/app/src/main/res/layout/fragment_eliminar_jugadors.xml
+++ b/app/src/main/res/layout/fragment_eliminar_jugadors.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".administrador.EliminarJugadors">
+    tools:context="ui.fragment.administrador.EliminarJugadors">
 
     <TextView
         android:id="@+id/TitolEliminarJugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
-        android:text="@string/jugador"
-        android:textSize="30sp"
+        android:text="@string/eliminar_jugadors"
+        android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
