--- a/app/src/main/res/layout/fragment_jugadors_admin.xml
+++ b/app/src/main/res/layout/fragment_jugadors_admin.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".administrador.JugadorsAdmin">
+    tools:context="ui.fragment.administrador.JugadorsAdmin">
     <TextView
         android:id="@+id/TitolJugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
         android:text="@string/veure_jugadors"
-        android:textSize="30sp"
+        android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
