--- a/app/src/main/res/layout/fragment_modificar_classificacio.xml
+++ b/app/src/main/res/layout/fragment_modificar_classificacio.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".administrador.ModificarClassificacio">
+    tools:context="ui.fragment.administrador.ModificarClassificacio">
 
     <TextView
         android:id="@+id/TitolModificarClassificacio"
@@ -15,7 +15,7 @@
         android:layout_marginTop="75dp"
         android:layout_marginEnd="5dp"
         android:text="@string/modificar_classificacio"
-        android:textSize="30sp"
+        android:textSize="23sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
