--- a/app/src/main/res/layout/fragment_menu_equips.xml
+++ b/app/src/main/res/layout/fragment_menu_equips.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".administrador.MenuEquips">
+    tools:context=".ui.fragment.administrador.MenuEquips">
 
     <TextView
         android:id="@+id/titol_menu_equips"
