--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,7 +7,7 @@
     //boton enter
     <style name="Widget.ComunicaProdis.ButtonEnter" parent="Widget.MaterialComponents.Button">
         <item name="android:minHeight">48dp</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textAppearance">?attr/textAppearanceBody1</item>
     </style>
@@ -16,7 +16,8 @@
     <style name="Widget.ComunicaProdis.ButtonConfirm" parent="Widget.MaterialComponents.Button">
         <item name="android:textSize">20sp</item>
         <item name="android:text">@string/acceptar</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">center
+        </item>
         <item name="android:textAppearance">?attr/textAppearanceBody1</item>
     </style>
 
