--- a/app/src/main/res/layout/fragment_classificacio_admin.xml
+++ b/app/src/main/res/layout/fragment_classificacio_admin.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ui.fragment.administrador.ClassificacioAdmin">
+    tools:context=".ui.fragment.administrador.ClassificacioAdmin">
 
     <TextView
         android:id="@+id/TitolClassificacio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:text="@string/classificaci"
         android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,16 +22,17 @@
         style="@style/Widget.ComunicaProdis.ButtonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="50dp"
         android:text="@string/tornar"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvClassificacio"
+        tools:ignore="TextContrastCheck" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvClassificacio"
         android:layout_width="350dp"
-        android:layout_height="450dp"
+        android:layout_height="300dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
