--- a/app/src/main/res/layout/fragment_crear_jugador.xml
+++ b/app/src/main/res/layout/fragment_crear_jugador.xml
@@ -11,7 +11,7 @@
         android:id="@+id/TitolCrearJugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:text="@string/crear_jugador"
         android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,8 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crear_jugador" />
+        app:layout_constraintTop_toBottomOf="@+id/crear_jugador"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/nomEquip"
@@ -105,6 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
             app:layout_constraintTop_toBottomOf="@+id/editNomEquip"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
             tools:layout_editor_absoluteX="1dp" />
 
     </androidx.cardview.widget.CardView>
