--- a/app/src/main/res/layout/fragment_eliminar_equips.xml
+++ b/app/src/main/res/layout/fragment_eliminar_equips.xml
@@ -10,7 +10,7 @@
         android:id="@+id/TitolEliminarEquips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:text="@string/eliminar_equips"
         android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,8 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eliminarEquip" />
+        app:layout_constraintTop_toBottomOf="@+id/eliminarEquip"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/nomEquip"
@@ -78,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
             app:layout_constraintTop_toBottomOf="@+id/editNomEquip"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
             tools:layout_editor_absoluteX="1dp" />
 
     </androidx.cardview.widget.CardView>
