--- a/app/src/main/res/layout/fragment_eliminar_jugadors.xml
+++ b/app/src/main/res/layout/fragment_eliminar_jugadors.xml
@@ -11,7 +11,7 @@
         android:id="@+id/TitolEliminarJugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:text="@string/eliminar_jugadors"
         android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,8 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eliminar_jugador" />
+        app:layout_constraintTop_toBottomOf="@+id/eliminar_jugador"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/nomEquip"
