--- a/app/src/main/res/layout/fragment_equips_safe_args.xml
+++ b/app/src/main/res/layout/fragment_equips_safe_args.xml
@@ -10,7 +10,7 @@
         android:id="@+id/TitolEquip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:text="@string/equipnom"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,8 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvJugadors" />
+        app:layout_constraintTop_toBottomOf="@+id/rvJugadors"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/puntuacio"
@@ -35,7 +36,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="30dp"
         android:text="@string/puntuacio"
-        android:textSize="22sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitolEquip" />
 
@@ -46,7 +47,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="30dp"
         android:text="@string/jugadors"
-        android:textSize="22sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/puntuacio" />
 
@@ -55,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:layout_marginTop="30dp"
         android:text="@string/_0"
         app:layout_constraintStart_toEndOf="@+id/puntuacio"
