--- a/app/src/main/res/layout/fragment_jugadors_admin.xml
+++ b/app/src/main/res/layout/fragment_jugadors_admin.xml
@@ -10,7 +10,7 @@
         android:id="@+id/TitolJugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:text="@string/veure_jugadors"
         android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,8 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvJugadors" />
+        app:layout_constraintTop_toBottomOf="@+id/rvJugadors"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/nomEquip"
