--- a/app/src/main/res/layout/fragment_menu_equips.xml
+++ b/app/src/main/res/layout/fragment_menu_equips.xml
@@ -10,7 +10,7 @@
         android:id="@+id/titol_menu_equips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="50dp"
         android:text="@string/equip"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,8 @@
         android:text="@string/crear_equips"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titol_menu_equips" />
+        app:layout_constraintTop_toBottomOf="@+id/titol_menu_equips"
+        tools:ignore="TextContrastCheck" />
 
 
     <Button
@@ -38,7 +39,8 @@
         android:text="@string/eliminar_equips"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCrearEquips" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCrearEquips"
+        tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/btnModificarPuntuacio"
@@ -50,7 +52,8 @@
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnEliminarEquips" />
+        app:layout_constraintTop_toBottomOf="@+id/btnEliminarEquips"
+        tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/btn_tornar_menuequips"
@@ -61,6 +64,7 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnModificarPuntuacio" />
+        app:layout_constraintTop_toBottomOf="@+id/btnModificarPuntuacio"
+        tools:ignore="TextContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
