--- a/app/src/main/res/layout/fragment_modificar_classificacio.xml
+++ b/app/src/main/res/layout/fragment_modificar_classificacio.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="5dp"
         android:text="@string/modificar_classificacio"
         android:textSize="23sp"
@@ -31,7 +31,8 @@
         android:text="@string/tornar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ModificarClassificacio" />
+        app:layout_constraintTop_toBottomOf="@+id/ModificarClassificacio"
+        tools:ignore="TextContrastCheck" />
 
     <TextView
         android:id="@+id/nomEquip"
@@ -110,6 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
             app:layout_constraintTop_toBottomOf="@+id/editNomEquip"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
             tools:layout_editor_absoluteX="1dp" />
 
     </androidx.cardview.widget.CardView>
