--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,10 +24,12 @@
     </style>
     <style name="Widget.ComunicaProdis.buttonTherme" parent="Widget.AppCompat.Button">
         <item name="android:minHeight">40dp</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:gravity">center_horizontal</item>
+        <item name="android:gravity">center</item>
         <item name="android:textAppearance">?attr/textAppearanceBody1</item>
+        <item name="android:textStyle">bold</item>
+
         <!--<item name="android:backgroundTint">@color/purple_200</item>-->
     </style>
     <style name="constraintlayoutTherme">
